# MonteCarlo

./: CMakeLists.txt  README.md  bs  data.in  main  main.cpp  main.py  test.cpp  visualise.py  visualize.py
include/: MonteCarlo.h
results/: option.out  option1.out
src/: MonteCarlo.cpp
